force-app/main/default/objects/Dataload_Error_Log__c/Dataload_Error_Log__c.object-meta.xml
<CustomObject>
    <description>This object receives daily person and business customer loading error info from two _error.csv files.</description>
    <label>Dataload Error Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataload Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataload Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>