force-app/main/default/objects/Dataload_Error_Log__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>