force-app/main/default/objects/Dataload_Error_Log__c/fields/CIXF__c.field-meta.xml
<CustomField>
    <fullName>CIXF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIXF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>