force-app/main/default/objects/Dataload_Error_Log__c/fields/CIXF_ID__c.field-meta.xml
<CustomField>
    <fullName>CIXF_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIXF ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>