force-app/main/default/objects/Dataload_Error_Log__c/fields/Date_Insert__c.field-meta.xml
<CustomField>
    <fullName>Date_Insert__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Insert</label>
    <type>Date</type>
</CustomField>