force-app/main/default/objects/Dataload_Error_Log__c/fields/External_ID_Combo_Key__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Combo_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External ID Combo Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>