force-app/main/default/objects/Dataload_Error_Log__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>