force-app/main/default/objects/Dataload_Error_Log__c/fields/FNB_System_of_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FNB_System_of_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FNB System of Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>