force-app/main/default/objects/Dataload_Error_Log__c/fields/Is_Person__c.field-meta.xml
<CustomField>
    <fullName>Is_Person__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox field determines whether a record is for a person customer or business customer.</description>
    <label>Is Person</label>
    <type>Checkbox</type>
</CustomField>