force-app/main/default/objects/Dataload_Error_Log__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>