force-app/main/default/objects/Dataload_Error_Log__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>