force-app/main/default/objects/Dataload_Error_Log__c/fields/PL_ID__c.field-meta.xml
<CustomField>
    <fullName>PL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PL ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>