force-app/main/default/objects/Dataload_Error_Log__c/fields/Precision_Lender_ID__c.field-meta.xml
<CustomField>
    <fullName>Precision_Lender_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Precision Lender ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>