force-app/main/default/objects/Dataload_Error_Log__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>