force-app/main/default/objects/Dataload_Error_Log__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>