force-app/main/default/objects/Dataload_Error_Log__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>